Implement get price from bamboo card portal

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,24 @@ wheels/
 
 # Virtual environments
 .venv
+
+# logs
+**/logs/*
+!**/logs/.gitkeep
+
+# keys
+keys.json
+
+# Setting.envs
+*.env
+
+# Downloaded_files
+downloaded_files/
+
+# Data
+data/*
+!data/.gitkeep
+
+# Data
+user_dir/*
+!user_dir/.gitkeep
